--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta name="google-site-verification" content="Y_HEcTrM4Z0C4nFGPfpmKdojnK5iD8J9remoslBIBoU" />
+<meta name=”description” content=”部活動の顧問不足に悩む学校と競技経験者をつなぐ無料サービスです。必要以上に部活動に拘束された教員、休日を持て余しなにか地域や社会貢献したい社会人がWIN-WINの関係で繋がればという思いで作りました。”>
 <meta charset="UTF-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0,minimum-scale=1.0">
